# longview-health

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: PLAN.md  ROADMAP.md  prd-mvp.md
macos/LongviewHealth/: .gitignore  project.yml
macos/LongviewHealth/LongviewHealth/: ContentView.swift  Info.plist  LongviewHealthApp.swift  Theme.swift
macos/LongviewHealth/LongviewHealth.xcodeproj/: project.pbxproj
packaging/: build_engine.sh  longview.spec  pyi_rth_multiprocessing.py
scripts/: ingest_and_export.py  test_extraction.py  test_mlx_extraction.py  test_ollama_only.py  visualize_docling.py
src/longview_health/cli/: export.py  main.py  model.py  rescan.py  results.py  review.py  search.py  settings.py  trend.py  vault.py
src/longview_health/core/: config.py  errors.py  paths.py  protocols.py
src/longview_health/domain/: enums.py  identifiers.py  models.py
src/longview_health/extract/: docling_parser.py  (+12 more)
tests/: test_smoke.py  test_vault_integration.py
tests/domain/: test_identifiers.py  test_models.py
tests/extract/: generate_fixtures.py  test_extraction_chain.py  test_form_extractor.py  test_llm_extractor.py  test_parsers.py  test_region_grouper.py  test_result_merger.py  test_section_router.py  test_table_extractor.py  test_table_item_extractor.py  test_text_extractor.py
tests/ingest/: test_enumerator.py
tests/review/: test_review_store.py
tests/search/: test_search_store.py
tests/storage/: test_document_store.py  test_results_store.py
tests/trends/: test_engine.py  test_export.py
tests/validate/: test_engine.py  test_rules.py
(+35 files in other folders)
