[project]
name = "longview-health"
version = "0.1.0"
description = "CLI-first, local-first health document indexing and medical result trend extraction."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "docling>=2.0",
    "pdfplumber>=0.10",
    "httpx>=0.27",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
longview = "longview_health.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/longview_health"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
